# wakesp

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: dns.rs  http_server.rs  main.rs  pins.rs  udp.rs  utils.rs
src/http_server/: html_responses.rs  switch_utils.rs  wol_utils.rs
