[package]
name = "wakesp"
version = "0.1.0"
authors = ["etiennecollin <collin.etienne.contact@gmail.com>"]
repository = "https://github.com/etiennecollin/wakesp"
edition = "2021"
license = "MIT"

[features]
default = [
    "esp32c3",
    "log",
]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-wifi/esp32c3", "esp-hal-embassy/esp32c3"]

log = [
    "dep:log",
    "embassy-executor/log",
    "esp-backtrace/println",
    "esp-hal/log",
    "esp-println/log",
    "esp-wifi/log",
]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-net/defmt",
    "esp-backtrace/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-wifi/defmt",
]
jtag = ["esp-println/jtag-serial", "esp-wifi/phy-enable-usb"]
uart = ["esp-println/uart"]

[dependencies]
defmt = { version = "0.3.8", optional = true }
embassy-executor = { version = "0.5.0", features=["nightly"]}
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dns", "dhcpv4", "dhcpv4-hostname", "medium-ethernet"] }
embassy-time = { version = "0.3.0", features=["generic-queue-8"] }
esp-backtrace = { version = "0.12.0", features = ["panic-handler", "exception-handler"] }
esp-hal = { version = "0.18.0" }
esp-hal-embassy = { version = "0.1.0", features = ["time-timg0"] }
esp-println = { version = "0.9.1", features = ["critical-section", "colors"] }
esp-wifi = { version = "0.6.0", features = ["wifi", "ipv4", "tcp", "udp", "icmp", "igmp", "dns", "dhcpv4", "embassy-net"] }
heapless = "0.8.0"
log = { version = "0.4.21", optional = true }

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
