[package]
name = "wakesp"
version = "0.2.2"
authors = ["etiennecollin <collin.etienne.contact@gmail.com>"]
repository = "https://github.com/etiennecollin/wakesp"
edition = "2024"
license = "MIT"

[features]
default = ["esp32c3", "log", "logging-auto"]

esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-wifi/esp32c3",
]

log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-hal/log",
    "esp-println/log",
    "esp-wifi/log",
]

defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "esp-alloc/defmt",
    "esp-backtrace/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-wifi/defmt",
]

logging-auto = ["esp-println/auto"]
logging-jtag = ["esp-println/jtag-serial"]
logging-uart = ["esp-println/uart"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
embassy-executor = { version = "0.7.0", features=["nightly"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dns", "dhcpv4", "dhcpv4-hostname"] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features=["generic-queue-8"] }
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.0", features = ["panic-handler", "exception-handler", "colors"] }
esp-hal = { version = "0.23.1" }
esp-hal-embassy = { version = "0.6.0" }
esp-println = { version = "0.13.0", features = ["critical-section", "colors"] }
esp-wifi = { version = "0.12.0", features = ["wifi"] }
heapless = "0.8.0"
log = { version = "0.4.25", optional = true }

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
